--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.2.0",
     "sqlite3": "^5.0.0",
+    "ts-node": "^9.1.0",
     "typeorm": "^0.2.29",
     "yup": "^0.31.1"
   },
