--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
-    "start": "ts-node src/server.ts"
+    "start": "node src/server.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -15,7 +15,6 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^4.2.0",
     "sqlite3": "^5.0.0",
-    "ts-node": "^9.1.0",
     "typeorm": "^0.2.29",
     "yup": "^0.31.1"
   },
