--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
-    "start": "node src/server.js"
+    "start": "node dist/server.js",
+    "build": "tsc -p ."
   },
   "dependencies": {
     "axios": "^0.21.0",
@@ -21,7 +22,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.9",
+    "@types/node": "^14.14.10",
     "@types/yup": "^0.29.9",
+    "ts-node": "^9.1.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
